--- a/res/warp_uwsgi.ini
+++ b/res/warp_uwsgi.ini
@@ -19,6 +19,6 @@ route-run = last:
 
 route-label = static
 route = ^/static/(.*) rewrite:$1
-route-if = isfile:/opt/warp/static/${PATH_INFO} static:/opt/warp/static/${PATH_INFO}
+route-if = isfile:/opt/Desk24/static/${PATH_INFO} static:/opt/Desk24/static/${PATH_INFO}
 route-run = addheader:Cache-Control: no-cache
 route-run = return:404
