--- a/res/desk24_uwsgi.ini
+++ b/res/desk24_uwsgi.ini
@@ -1,24 +1,24 @@
 [uwsgi]
-socket = 0.0.0.0:8000  ; Der Socket, auf den der uWSGI-Server horcht
+socket = 0.0.0.0:8000
 
-master = True  ; Der Hauptprozess wird als Master-Prozess ausgeführt
-log-master = True  ; Das Loggen erfolgt auf dem Master-Prozess
-buffer-size = 32768  ; Die Puffergröße für die Kommunikation
+master = True
+log-master = True
+buffer-size=32768
 
-processes = 4  ; Anzahl der uWSGI-Prozesse
-threads = 2  ; Anzahl der Threads pro Prozess
-offload-threads = 2  ; Anzahl der Offload-Threads
+processes = 4
+threads = 2
+offload-threads = 2
 
-mimefile = /etc/mime.types  ; Pfad zur Datei, die die MIME-Typen enthält
-die-on-term = True  ; Beendet den uWSGI-Server beim Empfangen eines SIGTERM-Signals
+mimefile = /etc/mime.types
+die-on-term = True
 
-module = warp:create_app()  ; Der Name des Moduls und der Funktion, die die Anwendung erstellt
+module = desk24:create_app()
 
-route = ^/static/ goto:static  ; Weiterleitung der Anfragen, die mit "/static/" beginnen, an die Route "static"
+route = ^/static/ goto:static
 route-run = last:
 
-route-label = static  ; Die Bezeichnung der Route "static"
-route = ^/static/(.*) rewrite:$1  ; Umleitung der Anfragen, die mit "/static/" gefolgt von beliebigen Zeichen beginnen
-route-if = isfile:/opt/Desk24/static/${PATH_INFO} static:/opt/Desk24/static/${PATH_INFO}  ; Überprüfung, ob die angeforderte Datei vorhanden ist
-route-run = addheader:Cache-Control: no-cache  ; Hinzufügen des "Cache-Control: no-cache"-Headers zur Antwort
-route-run = return:404  ; Senden einer 404-Antwort, wenn die Datei nicht gefunden wurde
+route-label = static
+route = ^/static/(.*) rewrite:$1
+route-if = isfile:/opt/Desk24/static/${PATH_INFO} static:/opt/Desk24/static/${PATH_INFO}
+route-run = addheader:Cache-Control: no-cache
+route-run = return:404
