--- a/res/nginx.conf
+++ b/res/nginx.conf
@@ -1,10 +1,10 @@
 server {
 
-    server_name _;  // Platzhalter für alle eingehenden Anfragen ohne spezifischen Hostnamen
-    listen 80;  // Der Webserver horcht auf Port 80 für eingehende Verbindungen
+    server_name _;
+    listen 80;
 
     location / {
-        uwsgi_pass desk24-wsgi:8000;  // Anfragen werden an den Back-End-Server "desk24-wsgi" auf Port 8000 weitergeleitet
-        include uwsgi_params;  // Einbindung der Datei "uwsgi_params" mit spezifischen Kommunikationsparametern
+        uwsgi_pass desk24-wsgi:8000;
+        include uwsgi_params;
     }
 }
